<resources>
    <string name="app_name">SVAP_Android</string>
    <string name="check_id_pw">아이디 또는 비밀번호를 다시 확인하세요.</string>
    <string name="passWord">비밀번호</string>
    <string name="id">아이디</string>
    <string name="no_member">아직 회원이 아니신가요?</string>
    <string name="login">로그인</string>
    <string name="goto_signUp">회원가입하기</string>
    <string name="search_petition">청원을 검색해보세요.</string>
    <string name="signup">회원가입</string>
    <string name="signup_id_hint">아이디(영문 8자 이하)</string>
    <string name="next">다음</string>
    <string name="already_signup">이미 가입하셨나요?</string>
    <string name="signup_pw_hint">비밀번호 (영문 + 숫자 8자 이상)</string>
    <string name="passWord_check">비밀번호 확인</string>
    <string name="check_password">비밀번호를 다시 확인해주세요.</string>
    <string name="password_no">비밀번호가 일치하지 않습니다.</string>
    <string name="fail_sever">서버 통신에 실패하였습니다</string>
    <string name="show_petition">청원 보기</string>
    <string name="write_petition">청원 작성</string>
    <string name="popularity_petition">인기 청원</string>
    <string name="see_more">더보기</string>
    <string name="check_id">아이디를 확인해주세요</string>
    <string name="use_another_user">다른 사용자가 사용중입니다</string>
    <string name="name">이름</string>
    <string name="name_check">이름을 확인해주세요</string>
    <string name="mismatch_password">비밀번호가 일치하지않습니다</string>
    <string name="success_signup">회원가입에 성공하였습니다</string>
    <string name="my_write_petition">내가 쓴 청원</string>
    <string name="complete">완료</string>
    <string name="essential">*</string>
    <string name="title">제목</string>
    <string name="write_title">제목을 입력하세요.</string>
    <string name="no_user">존재하지 않는 사용자입니다</string>
    <string name="ban_account">이 계정은 이용 정지 되었습니다</string>
    <string name="type">종류</string>
    <string name="location_tag">위치태그</string>
    <string name="content">내용</string>
    <string name="input_content">내용을 입력해주세요.</string>
    <string name="picture">사진</string>
    <string name="all_petition">전체 청원</string>
    <string name="school_petition">학교 청원</string>
    <string name="dormitory_petition">기숙사 청원</string>
    <string name="unKnown">알수 없음</string>
    <string name="home">홈</string>
    <string name="my_page">마이페이지</string>
    <string name="sir">님,</string>
    <string name="hello">안녕하세요!</string>
    <string name="my_write_petition_show">내가 쓴 청원 보기</string>
    <string name="edit_my_info">내 정보 수정</string>
    <string name="logout">로그아웃</string>
    <string name="delete_user">회원 탈퇴</string>
    <string name="detail_show">상세보기</string>
    <string name="vote_petition">청원 투표하기</string>
    <string name="click_agree_btn">이 청원과 같은 생각이라면 찬성 버튼을 눌러주세요.</string>
    <string name="agree">찬성</string>
    <string name="cancel_agree">찬성 취소</string>
    <string name="report_petition">이 청원 신고하기</string>
    <string name="cancel">취소</string>
</resources>