<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.signup.signupPw.SignUpPwFragment">

    <TextView
        android:id="@+id/tv_signup_pw_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:fontFamily="@font/ibm_semibold"
        android:textColor="@color/gray_700"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_signup_pw_page_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/gray_700"
        android:text="2/3"
        android:fontFamily="@font/ibm_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_signup_pw_pw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/focus_edit_text"
        android:hint="@string/signup_pw_hint"
        android:fontFamily="@font/ibm_medium"
        android:paddingStart="16dp"
        android:textSize="16sp"
        android:drawableEnd="@drawable/eye_close_line"
        android:paddingEnd="16dp"
        android:singleLine="true"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_pw_page_count"/>

    <EditText
        android:id="@+id/et_signup_pw_check"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/focus_edit_text"
        android:hint="@string/passWord_check"
        android:fontFamily="@font/ibm_medium"
        android:paddingStart="16dp"
        android:textSize="16sp"
        android:drawableEnd="@drawable/eye_close_line"
        android:paddingEnd="16dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/et_signup_pw_pw"
        app:layout_constraintEnd_toEndOf="@id/et_signup_pw_pw"
        app:layout_constraintTop_toBottomOf="@id/et_signup_pw_pw"/>

    <TextView
        android:id="@+id/tv_signup_pw_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_password"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ibm_medium"
        android:textColor="@color/system_red"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/et_signup_pw_check"
        app:layout_constraintTop_toBottomOf="@id/et_signup_pw_check"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup_pw_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/disable_btn"
            android:textSize="20sp"
            android:text="@string/next"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_signup"
                android:textColor="@color/gray_700"
                android:fontFamily="@font/ibm_medium"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_signup_pw_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:fontFamily="@font/ibm_medium"
                android:textSize="12sp"
                android:textColor="@color/main_1"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>