<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.signup.signupId.SignUpIdFragment">

    <EditText
        android:id="@+id/et_signup_id_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/focus_edit_text"
        android:hint="@string/signup_id_hint"
        android:fontFamily="@font/ibm_medium"
        android:paddingStart="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup_id_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/disable_btn"
            android:textSize="20sp"
            android:text="@string/next"
            android:textColor="@color/white"/>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_signup"
                android:textColor="@color/gray_700"
                android:fontFamily="@font/ibm_medium"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_signup_id_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:fontFamily="@font/ibm_medium"
                android:textSize="12sp"
                android:textColor="@color/main_1"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>