<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.write.WritePetitionFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_write_petition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_petition"
            android:layout_gravity="center"
            android:textColor="@color/gray_800"
            android:textSize="14sp"
            android:fontFamily="@font/ibm_medium"/>

        <TextView
            android:id="@+id/tv_write_petition_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:textSize="14sp"
            android:textColor="@color/gray_600"
            android:fontFamily="@font/ibm_medium"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_write_petition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/essential"
        android:textColor="@color/system_red"
        android:textSize="14sp"
        android:fontFamily="@font/ibm_medium"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_write_petition"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="14sp"
        android:textColor="@color/gray_700"
        android:fontFamily="@font/ibm_medium"
        app:layout_constraintStart_toEndOf="@id/tv_write_petition_title"
        app:layout_constraintTop_toTopOf="@id/tv_write_petition_title"/>

    <EditText
        android:id="@+id/et_write_petition_title"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/focus_edit_text"
        android:hint="@string/write_title"
        android:paddingStart="12dp"
        android:textColor="@color/gray_800"
        android:textSize="12sp"
        android:fontFamily="@font/ibm_medium"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_write_petition_title"
        app:layout_constraintStart_toStartOf="@id/tv_write_petition_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_write_petition_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/essential"
        android:textSize="14sp"
        android:textColor="@color/system_red"
        android:fontFamily="@font/ibm_medium"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/et_write_petition_title"
        app:layout_constraintTop_toBottomOf="@id/et_write_petition_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="14sp"
        android:textColor="@color/gray_700"
        android:fontFamily="@font/ibm_medium"
        app:layout_constraintStart_toEndOf="@id/tv_write_petition_type"
        app:layout_constraintTop_toTopOf="@id/tv_write_petition_type"/>

    <Spinner
        android:id="@+id/spinner_write_petition"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/focus_edit_text"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_write_petition_type"
        app:layout_constraintTop_toBottomOf="@id/tv_write_petition_type"
        app:layout_constraintEnd_toStartOf="@id/et_write_petition_location"/>

    <TextView
        android:id="@+id/tv_write_petition_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/essential"
        android:textColor="@color/system_red"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_write_petition_type"
        app:layout_constraintStart_toStartOf="@id/et_write_petition_location"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_tag"
        android:textSize="14sp"
        android:textColor="@color/gray_700"
        android:fontFamily="@font/ibm_medium"
        app:layout_constraintStart_toEndOf="@id/tv_write_petition_location"
        app:layout_constraintTop_toTopOf="@id/tv_write_petition_location"/>

    <EditText
        android:id="@+id/et_write_petition_location"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/focus_edit_text"
        android:textSize="12sp"
        android:textColor="@color/gray_800"
        android:paddingStart="12dp"
        android:fontFamily="@font/ibm_medium"
        app:layout_constraintStart_toEndOf="@id/spinner_write_petition"
        app:layout_constraintEnd_toEndOf="@id/et_write_petition_title"
        app:layout_constraintTop_toTopOf="@id/spinner_write_petition"
        app:layout_constraintBottom_toBottomOf="@id/spinner_write_petition"/>

    <TextView
        android:id="@+id/tv_write_petition_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/system_red"
        android:textSize="14sp"
        android:text="@string/essential"
        android:fontFamily="@font/ibm_medium"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/spinner_write_petition"
        app:layout_constraintTop_toBottomOf="@id/spinner_write_petition"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textSize="14sp"
        android:textColor="@color/gray_700"
        android:fontFamily="@font/ibm_medium"
        app:layout_constraintStart_toEndOf="@id/tv_write_petition_content"
        app:layout_constraintTop_toTopOf="@id/tv_write_petition_content"/>

    <EditText
        android:id="@+id/et_write_petition_content"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/focus_edit_text"
        android:hint="@string/input_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/gray_800"
        android:textSize="12sp"
        android:fontFamily="@font/ibm_medium"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/tv_write_petition_content"
        app:layout_constraintStart_toStartOf="@id/tv_write_petition_content"
        app:layout_constraintEnd_toEndOf="@+id/et_write_petition_location"/>

    <TextView
        android:id="@+id/tv_write_petition_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture"
        android:textColor="@color/gray_700"
        android:textSize="14sp"
        android:fontFamily="@font/ibm_medium"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/et_write_petition_content"
        app:layout_constraintTop_toBottomOf="@id/et_write_petition_content"/>

    <ImageButton
        android:id="@+id/ib_write_petition_gallery"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/picture_add_btn"
        android:src="@drawable/camera_icon"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_write_petition_picture"
        app:layout_constraintTop_toBottomOf="@id/tv_write_petition_picture"/>

</androidx.constraintlayout.widget.ConstraintLayout>