<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.myPage.MyPageFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_my_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="57dp"
            android:layout_height="20dp"
            android:src="@drawable/svap_icon"
            android:importantForAccessibility="no"
            android:layout_marginStart="20dp"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_my_page">

        <TextView
            android:id="@+id/tv_my_page_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="강해린"
            android:fontFamily="@font/ibm_medium"
            android:textColor="@color/main_1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sir"
            android:textColor="@color/gray_800"
            android:textSize="24sp"
            android:fontFamily="@font/ibm_medium"
            app:layout_constraintStart_toEndOf="@id/tv_my_page_name"
            app:layout_constraintTop_toTopOf="@id/tv_my_page_name"/>
        <TextView
            android:id="@+id/tv_my_page_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/gray_800"
            android:text="@string/hello"
            android:fontFamily="@font/ibm_medium"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_name"
            app:layout_constraintStart_toStartOf="@id/tv_my_page_name"/>

        <ImageView
            android:id="@+id/iv_my_page_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            android:background="@drawable/background_transparent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_hello"/>

        <TextView
            android:id="@+id/tv_my_page_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_write_petition_show"
            android:textSize="12sp"
            android:fontFamily="@font/ibm_medium"
            android:textColor="@color/gray_800"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/iv_my_page_line1"
            app:layout_constraintTop_toBottomOf="@id/iv_my_page_line1"/>

        <ImageView
            android:id="@+id/iv_my_page_line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/tv_my_page_show"
            app:layout_constraintEnd_toEndOf="@id/iv_my_page_line1"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_show"/>

        <TextView
            android:id="@+id/tv_my_page_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_my_info"
            android:textColor="@color/gray_800"
            android:textSize="12sp"
            android:fontFamily="@font/ibm_medium"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/iv_my_page_line2"
            app:layout_constraintTop_toBottomOf="@id/iv_my_page_line2"/>

        <ImageView
            android:id="@+id/iv_my_page_line3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/tv_my_page_edit"
            app:layout_constraintEnd_toEndOf="@id/iv_my_page_line2"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_edit"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/iv_my_page_line3"
            app:layout_constraintEnd_toEndOf="@id/iv_my_page_line3"
            app:layout_constraintTop_toBottomOf="@id/iv_my_page_line3">

            <TextView
                android:id="@+id/tv_my_page_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="12sp"
                android:textColor="@color/gray_800"
                android:fontFamily="@font/ibm_medium"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv_my_page_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_user"
                android:textSize="12sp"
                android:textColor="@color/gray_800"
                android:fontFamily="@font/ibm_medium"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>